# Musik

./: BUILD.md  CMakeLists.txt  README.md  io.github.denysmb.musik.json  org.koderoots.musik.desktop  org.koderoots.musik.json  org.koderoots.musik.metainfo.xml
src/: CMakeLists.txt  main.cpp  mpriscontroller.cpp  mpriscontroller.h  recentfilesmodel.cpp  recentfilesmodel.h  settings.cpp  settings.h
src/qml/: Main.qml
